# simple_weakptr

./: CMakeLists.txt  main.cpp  readme.md  weak_ptr.h  weak_ptr_unittest.cc
